--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*https://colorhunt.co/palette/0000001a4d2eff9f29faf3e3*/
 *{
   margin: 0;
   padding: 0;
@@ -17,16 +18,17 @@
   /* margin-left: auto; */
   width: 160px;
   height: 60px;
-  background-color: white;
+  background-color: #FAF3E3;
   position: relative;
-  border: 4px solid black;
+  border: 4px solid #FF9F29;
+  border-radius: 10%;
   margin-bottom: 10px;
-  margin: 5%;
+  margin: 8%;
   
 }
 
 .button p{
-  
+  border-radius: 10%;
   width: 154px;
   height: 54px;
   background-color: white;
@@ -36,6 +38,7 @@
   position: relative;
   z-index: 10;
   font-weight: 900;
+  color:#1A4D2E;
 }
 
 .button figure{
@@ -47,7 +50,7 @@
   transform: translate (-50%, -50%);
   background-color: white;
   border-radius: 50%;
-  border: 3px solid black;
+  border: 3px solid #1A4D2E;
   z-index: 1;
   transition-delay: 0;
 }
