change color of bubbles same to border

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@
   transform: translate (-50%, -50%);
   background-color: white;
   border-radius: 50%;
-  border: 3px solid #1A4D2E;
+  border: 3px solid #FF9F29;
   z-index: 1;
   transition-delay: 0;
 }
