--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+body{
+  font-family: 'League Gothic', sans-serif;
+
+  font-family: 'Rubik Moonrocks', cursive;
+}
+
 .container {
   width: 270px;
   position: relative;
